--- a/style.css
+++ b/style.css
@@ -75,10 +75,15 @@ nav a {
 .logo {
   width: 18rem;
   height: 100%;
+  margin-left: 30px;
 }
 
 .mobile-logo {
   display: none !important;
+}
+
+#bs-example-navbar-collapse-1 {
+  max-width: 47%;
 }
 
 #flex-mlogo {
